# precip_interpolation_thesis

./: .dockerignore  .gitignore  README.md  pyproject.toml
notebooks/: 00_holdout_split.ipynb
notebooks/01_data/: data_quality.ipynb  elevation_analysis.ipynb  precip_distribution.ipynb  soilgrids_eda.ipynb  study_area_climate.ipynb
notebooks/02_methodology/: crps_explanation.ipynb  stationarity_evidence.ipynb  transform_pipeline.ipynb  variogram_parameters.ipynb
notebooks/03_kriging/: kriging_cv_predwet_aggregation.ipynb  kriging_eval.ipynb  kriging_fold0_eval.ipynb  kriging_test.ipynb  kriging_tps_experiment.ipynb  kriging_train.ipynb  kriging_viz_indicator.ipynb  quota_distribution_check.ipynb
notebooks/03_results/: cv_model_selection.ipynb  elevation_experiment.ipynb  prediction_maps.ipynb  sensitivity_max_wet.ipynb  uncertainty_analysis.ipynb  variogram_diagnostics.ipynb  viz_9combos_single_day.ipynb  viz_indicator_kriging.ipynb
notebooks/04_lgbm/: compare_loss_function.ipynb  grk_lgb_gamma_quantile.ipynb  grk_lgb_tweedie_simple.ipynb  lgbm_demo.ipynb  lgbm_eval.ipynb  lgbm_explain.ipynb  lgbm_hpo.ipynb  lgbm_stage1.ipynb  lgbm_stage1_hpo.ipynb  lgbm_test.ipynb  lgbm_test_all_records.ipynb  lgbm_train.ipynb
notebooks/05_bayesnf/: BAYESNF_EXPLAINED.md  metrics.json
notebooks/05_bayesnf/baseline/: _merge_holdout.py  baseline.ipynb  baselineVI.ipynb
notebooks/05_bayesnf/final/: final.ipynb  final_loss_plot.ipynb
notebooks/05_bayesnf/geo_features/: geo_features.ipynb
notebooks/05_bayesnf/grid_features/: grid_features.ipynb
notebooks/05_bayesnf/kfold/: kfold.ipynb
notebooks/05_bayesnf/kfold_analysis/: kfold_analysis.ipynb  kfold_loss_plot.ipynb
notebooks/05_bayesnf/time_seasonality/: metrics.ipynb  time_seasonality.ipynb
notebooks/05_bayesnf/uncertainty/: _compute_uncertainty.py  uncertainty.ipynb
notebooks/06_comparison/: fold0_comparison.ipynb
notebooks/07_dataset/: 03_predict.ipynb  04_analysis.ipynb  05_multires_analysis.ipynb
notebooks/07_dataset/tools/: 01_build_grid.ipynb  02_aggregate.ipynb  03_predict.ipynb
notebooks/tool/: predict.ipynb
scripts/: entrypoint.sh  fetch_source.sh  gen_architecture_diagram.py  gen_fig_precip_distribution.py  setup_gpu.sh
src/thesis/: __init__.py  cache.py  config.py  grid.py
src/thesis/data/: dem.py  protocols.py  registry.py  rekis.py  soilgrids.py
src/thesis/datasets/: protocols.py
src/thesis/scripts/: _common.py  build_monthly_grids.py  run_cv.py  (+9 more)
thesis/: appendix.tex  bib-database.bib  ctufit-thesis.tex  ctufit-thesis.xmpdata  text.tex
thesis/text/: 1_introduction.tex  2_theoretical_background.tex  3_data_study_area.tex  4_kriging.tex  5_gradient_boosting.tex  6_bayesian_nf.tex  7_comparison.tex  8_conclusion.tex
(+22 files in other folders)
