[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # core / scientific
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandas>=2.0,<2.2",  # bayesnf 0.1.3 uses the legacy 'Y' offset alias removed in pandas 2.2+
    "numpy>=1.26,<2.0",  # pandas <2.2 built against numpy 1.x ABI; numpy 2.x → ImportError
    "xarray>=2024.0",
    "rasterio>=1.3",
    "pyproj>=3.6",
    "scipy>=1.11",
    "pyarrow>=14.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "joblib>=1.3",
    # kriging
    "pykrige>=1.7",
    # LightGBM (CPU wheel by default; GPU build via scripts/setup_gpu.sh)
    "lightgbm>=4.3",
    # metrics
    "properscoring>=0.1",
    # HPO
    "optuna>=3.6",
    # BayesNF stack (JAX-based).
    # TFP 0.25.0 (the latest release that bayesnf 0.1.3 builds against) references
    # jax.interpreters.xla.pytype_aval_mappings, which was removed in JAX 0.4.36+.
    # JAX/jaxlib/flax are pinned to versions compatible with TFP 0.25.0.
    "bayesnf>=0.1.3",
    "jax>=0.4.20,<0.4.36",
    "jaxlib>=0.4.20,<0.4.36",
    "flax>=0.8,<0.10",
    "optax>=0.2,<0.2.4",
    "jaxtyping>=0.2",
    "tensorflow-probability[jax]==0.25.0",
    # jupyter
    "jupyter",
    "ipykernel",
]

[project.optional-dependencies]
# GPU: pip install -e ".[gpu]" — overlays JAX with CUDA 12 wheels.
# LightGBM CUDA build is handled by scripts/setup_gpu.sh (one-shot for vast.ai).
gpu = [
    "jax[cuda12]>=0.4.20,<0.4.36",
    # JAX 0.4.35 crashes at import on nvidia-cuda-nvcc-cu12>=12.6 (namespace package
    # without __init__.py → cuda_nvcc.__file__ is None → pathlib.Path(None) TypeError).
    # The fix landed only in JAX 0.4.36+, which is blocked by the TFP 0.25.0 pin, so nvcc is held at 12.5.x.
    "nvidia-cuda-nvcc-cu12<12.6",
    # CuPy for GPU vectorisation of SVD/GOS feature compute (notebooks/05_bayesnf).
    # cupy 13.x is built against the numpy 2.x ABI and breaks the pandas<2.2 pin required by bayesnf.
    # The 12.x series is the last one on the numpy 1.x ABI.
    "cupy-cuda12x>=12.0,<13",
    # CUDA runtime libraries that cupy dlopens. jax[cuda12] ships cublas/cufft/cusolver/cusparse/
    # cuda-nvrtc but not curand, so it is pulled in explicitly. The Docker base image carries no
    # system-level CUDA libraries, hence the dependency on pip wheels.
    "nvidia-curand-cu12",
]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
